--- a/tailwindPrac/index.html
+++ b/tailwindPrac/index.html
@@ -1,13 +1,158 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="/css/main.css" rel="stylesheet">
-</head>
-<body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="/css/main.css" rel="stylesheet" />
+  </head>
+  <body class="mx-60">
+    <div
+      id="Header"
+      class="flex flex-row gap-5 justify-end bg-slate-50 px-4 py-4"
+    >
+      <div id="Home" class="hover:text-blue-500">
+        <label> Home </label>
+      </div>
+      <div id="About" class="hover:text-blue-500">
+        <label> About </label>
+      </div>
+      <div id="Services" class="hover:text-blue-500">
+        <label> Services </label>
+      </div>
+      <div id="Team" class="hover:text-blue-500">
+        <label> Team </label>
+      </div>
+      <div id="GetStarted">
+        <a
+          href="#"
+          class="ml-8 whitespace-nowrap items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-base font-medium text-white bg-indigo-600 hover:bg-indigo-700"
+        >
+          Get Started
+        </a>
+      </div>
+    </div>
+
+    <div id="Home" class="grid grid-cols-2 grid-rows-1 gap-6 px-3 bg-slate-50">
+      <div id="TitlePic" class="flex flex-col font-bold text-4xl py-3 md:flex">
+        <h2>Simplify your company solutions with our IT Solutions</h2>
+        <div
+          id="PicuteIdea"
+          class="border border-hidden rounded-lg my-6 shadow-sm md:shrink-0"
+        >
+          <img
+            src="./images/image1.jpg"
+            alt="Picture of Idea"
+            width="400px"
+            height="400px"
+          />
+        </div>
+      </div>
+      <div id="HowWeHelp" class="flex flex-col justify-end m-6 text-justify">
+        <div id="ReasonOne" class="p-12 grid grid-cols-2">
+          <div id="number1" class="flex flex-row">
+            <h3 class="font-bold">1</h3>
+          </div>
+          <div>
+            <h3 class="text-lg font-bold">Project Discussion</h3>
+            <p>
+              It is a long established fact that the reader will be distracted
+              by new readable content
+            </p>
+          </div>
+        </div>
+        <div id="ReasonTwo" class="p-12 grid grid-cols-2">
+          <div id="number2" class="flex flex-row">
+            <h3 class="font-bold">2</h3>
+          </div>
+          <div>
+            <h3 class="text-lg font-bold">Case Study</h3>
+            <p>
+              It is a long established fact that the reader will be distracted
+              by new readable content
+            </p>
+          </div>
+        </div>
+        <div id="ReasonThree" class="p-12 grid grid-cols-2">
+          <div id="number3" class="flex flex-row">
+            <h3 class="font-bold">3</h3>
+          </div>
+          <div>
+            <h3 class="text-lg font-bold">Execute Project</h3>
+            <p>
+              It is a long established fact that the reader will be distracted
+              by new readable content
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="Services" class="bg-slate-50 p-6">
+      <h2 class="flex flex-row justify-center font-bold text-4xl py-3">
+        Here are the services we provide
+      </h2>
+      <p class="flex flex-row justify-center py-3">
+        The point of using Lorem ipsum is that it has
+      </p>
+
+      <div
+        id="ServiceGrid"
+        class="grid grid-cols-3 gap-4 grid-rows-2 m-4 justify-center"
+      >
+        <div class="flex flex-col border border-solid rounded p-2 bg-slate-200">
+          <img src="./images/settings.png" alt="" width="50px" height="50px" />
+          <h5 class="text-sm font-bold">Software Development</h5>
+          <p>
+            It is a long established fact that the reader will be distracted by
+            new readable content
+          </p>
+        </div>
+        <div class="flex flex-col border border-solid rounded p-2 bg-slate-200">
+          <img src="./images/settings.png" alt="" width="50px" height="50px" />
+          <h5 class="text-sm font-bold">System Applications</h5>
+          <p>
+            It is a long established fact that the reader will be distracted by
+            new readable content
+          </p>
+        </div>
+        <div class="flex flex-col border border-solid rounded p-2 bg-slate-200">
+          <img src="./images/settings.png" alt="" width="50px" height="50px" />
+          <h5 class="text-sm font-bold">Network Solutions</h5>
+          <p>
+            It is a long established fact that the reader will be distracted by
+            new readable content
+          </p>
+        </div>
+        <div class="flex flex-col border border-solid rounded p-2 bg-slate-200">
+          <img src="./images/settings.png" alt="" width="50px" height="50px" />
+          <h5 class="text-sm font-bold">A.I Systems</h5>
+          <p>
+            It is a long established fact that the reader will be distracted by
+            new readable content
+          </p>
+        </div>
+        <div class="flex flex-col border border-solid rounded p-2 bg-slate-200">
+          <img src="./images/settings.png" alt="" width="50px" height="50px" />
+          <h5 class="text-sm font-bold">Web & App Development</h5>
+          <p>
+            It is a long established fact that the reader will be distracted by
+            new readable content
+          </p>
+        </div>
+        <div class="flex flex-col border border-solid rounded p-2 bg-slate-200">
+          <img src="./images/settings.png" alt="" width="50px" height="50px" />
+          <h5 class="text-sm font-bold">IT Consulttions</h5>
+          <p>
+            It is a long established fact that the reader will be distracted by
+            new readable content
+          </p>
+        </div>
+      </div>
+    </div>
+  </body>
+  <a
+    href="https://www.flaticon.com/free-icons/it-support"
+    title="it support icons"
+    >It support icons created by iconmas - Flaticon</a
+  >
 </html>
