--- a/tailwindPrac/index.html
+++ b/tailwindPrac/index.html
@@ -8,7 +8,7 @@
   <body class="mx-60">
     <div
       id="Header"
-      class="flex flex-row gap-5 justify-end bg-slate-50 px-4 py-4"
+      class="md:flex md:flex-row md:gap-5 md:justify-end md:bg-slate-50 px-4 py-4 sm:justify-start sm:flex-col"
     >
       <div id="Home" class="hover:text-blue-500">
         <label> Home </label>
@@ -32,8 +32,11 @@
       </div>
     </div>
 
-    <div id="Home" class="grid grid-cols-2 grid-rows-1 gap-6 px-3 bg-slate-50">
-      <div id="TitlePic" class="flex flex-col font-bold text-4xl py-3 md:flex">
+    <div
+      id="Home"
+      class="md:grid md:grid-cols-2 md:grid-rows-1 gap-6 px-3 bg-slate-50 sm:grid sm:grid-cols-1 sm:grid-rows-1"
+    >
+      <div id="TitlePic" class="flex flex-col font-bold text-4xl py-3">
         <h2>Simplify your company solutions with our IT Solutions</h2>
         <div
           id="PicuteIdea"
@@ -48,7 +51,7 @@
         </div>
       </div>
       <div id="HowWeHelp" class="flex flex-col justify-end m-6 text-justify">
-        <div id="ReasonOne" class="p-12 grid grid-cols-2">
+        <div id="ReasonOne" class="p-12 grid grid-cols-2 sm:flex sm:flex-row">
           <div id="number1" class="flex flex-row">
             <h3 class="font-bold">1</h3>
           </div>
@@ -60,7 +63,7 @@
             </p>
           </div>
         </div>
-        <div id="ReasonTwo" class="p-12 grid grid-cols-2">
+        <div id="ReasonTwo" class="p-12 grid grid-cols-2 sm:flex sm:flex-row">
           <div id="number2" class="flex flex-row">
             <h3 class="font-bold">2</h3>
           </div>
@@ -72,7 +75,7 @@
             </p>
           </div>
         </div>
-        <div id="ReasonThree" class="p-12 grid grid-cols-2">
+        <div id="ReasonThree" class="p-12 grid grid-cols-2 sm:flex sm:flex-row">
           <div id="number3" class="flex flex-row">
             <h3 class="font-bold">3</h3>
           </div>
@@ -97,7 +100,7 @@
 
       <div
         id="ServiceGrid"
-        class="grid grid-cols-3 gap-4 grid-rows-2 m-4 justify-center"
+        class="md:grid md:grid-cols-3 gap-4 md:grid-rows-2 m-4 justify-center sm:grid sm:grid-cols-1"
       >
         <div class="flex flex-col border border-solid rounded p-2 bg-slate-200">
           <img src="./images/settings.png" alt="" width="50px" height="50px" />
