--- a/tailwindPrac/index.html
+++ b/tailwindPrac/index.html
@@ -7,28 +7,32 @@
   </head>
   <body class="mx-60">
     <div
-      id="Header"
-      class="md:flex md:flex-row md:gap-5 md:justify-end md:bg-slate-50 px-4 py-4 sm:justify-start sm:flex-col"
+      id="HomePage"
+      class="grid grid-rows-homePage w-[100%] h-[100%] bg-slate-50"
     >
-      <div id="Home" class="hover:text-blue-500">
-        <label> Home </label>
-      </div>
-      <div id="About" class="hover:text-blue-500">
-        <label> About </label>
-      </div>
-      <div id="Services" class="hover:text-blue-500">
-        <label> Services </label>
-      </div>
-      <div id="Team" class="hover:text-blue-500">
-        <label> Team </label>
-      </div>
-      <div id="GetStarted">
-        <a
-          href="#"
-          class="ml-8 whitespace-nowrap items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-base font-medium text-white bg-indigo-600 hover:bg-indigo-700"
+      <div
+        id="Header"
+        class="mb-6 flex flex-wrap items-center justify-center xl:justify-end"
+      >
+        <div
+          class="font-bold text-3xl ml-4 justify-center xl:flex-auto xl:justify-start min-w-[100px]"
         >
-          Get Started
-        </a>
+          <div class="w-2 h-2 rounded-full bg-primary"></div>
+          <div id="Logo" class="font-PT-serif -m-1.5">IT-tech</div>
+        </div>
+        <ul
+          class="flex flex-row font-semibold text-sm items-center px-6 gap-5 sm:gap-24"
+        >
+          <li class="hover:text-blue-400 hover:cursor-pointer">Home</li>
+          <li>About</li>
+          <li>Services</li>
+          <li>Team</li>
+          <button
+            class="bg-blue-500 py-2 sm:py-3 px-6 rounded-lg shadow-lg shadow-glow text-white"
+          >
+            Get Started
+          </button>
+        </ul>
       </div>
     </div>
 
@@ -47,6 +51,7 @@
             alt="Picture of Idea"
             width="400px"
             height="400px"
+            class="rounded-xl"
           />
         </div>
       </div>
@@ -100,17 +105,23 @@
 
       <div
         id="ServiceGrid"
-        class="md:grid md:grid-cols-3 gap-4 md:grid-rows-2 m-4 justify-center sm:grid sm:grid-cols-1"
+        class="md:grid md:grid-cols-3 gap-16 md:grid-rows-2 m-4 justify-center sm:grid sm:grid-cols-1"
       >
-        <div class="flex flex-col border border-solid rounded p-2 bg-slate-200">
-          <img src="./images/settings.png" alt="" width="50px" height="50px" />
+        <div class="flex flex-col shadow rounded-2xl p-8 bg-white">
+          <img
+            src="./images/settings.png"
+            alt=""
+            width="50px"
+            height="50px"
+            class="bg-indigo-300 rounded-full"
+          />
           <h5 class="text-sm font-bold">Software Development</h5>
           <p>
             It is a long established fact that the reader will be distracted by
             new readable content
           </p>
         </div>
-        <div class="flex flex-col border border-solid rounded p-2 bg-slate-200">
+        <div class="flex flex-col shadow rounded-2xl p-8 bg-white">
           <img src="./images/settings.png" alt="" width="50px" height="50px" />
           <h5 class="text-sm font-bold">System Applications</h5>
           <p>
@@ -118,7 +129,7 @@
             new readable content
           </p>
         </div>
-        <div class="flex flex-col border border-solid rounded p-2 bg-slate-200">
+        <div class="flex flex-col shadow rounded-2xl p-8 bg-white">
           <img src="./images/settings.png" alt="" width="50px" height="50px" />
           <h5 class="text-sm font-bold">Network Solutions</h5>
           <p>
@@ -126,7 +137,7 @@
             new readable content
           </p>
         </div>
-        <div class="flex flex-col border border-solid rounded p-2 bg-slate-200">
+        <div class="flex flex-col shadow rounded-2xl p-8 bg-white">
           <img src="./images/settings.png" alt="" width="50px" height="50px" />
           <h5 class="text-sm font-bold">A.I Systems</h5>
           <p>
@@ -134,7 +145,7 @@
             new readable content
           </p>
         </div>
-        <div class="flex flex-col border border-solid rounded p-2 bg-slate-200">
+        <div class="flex flex-col shadow rounded-2xl p-8 bg-white">
           <img src="./images/settings.png" alt="" width="50px" height="50px" />
           <h5 class="text-sm font-bold">Web & App Development</h5>
           <p>
@@ -142,7 +153,7 @@
             new readable content
           </p>
         </div>
-        <div class="flex flex-col border border-solid rounded p-2 bg-slate-200">
+        <div class="flex flex-col shadow rounded-2xl p-8 bg-white">
           <img src="./images/settings.png" alt="" width="50px" height="50px" />
           <h5 class="text-sm font-bold">IT Consulttions</h5>
           <p>
