adjustments to the header nav

--- a/tailwindPrac/index.html
+++ b/tailwindPrac/index.html
@@ -34,62 +34,64 @@
           </button>
         </ul>
       </div>
-    </div>
-
-    <div
-      id="Home"
-      class="md:grid md:grid-cols-2 md:grid-rows-1 gap-6 px-3 bg-slate-50 sm:grid sm:grid-cols-1 sm:grid-rows-1"
-    >
-      <div id="TitlePic" class="flex flex-col font-bold text-4xl py-3">
-        <h2>Simplify your company solutions with our IT Solutions</h2>
-        <div
-          id="PicuteIdea"
-          class="border border-hidden rounded-lg my-6 shadow-sm md:shrink-0"
-        >
-          <img
-            src="./images/image1.jpg"
-            alt="Picture of Idea"
-            width="400px"
-            height="400px"
-            class="rounded-xl"
-          />
-        </div>
-      </div>
-      <div id="HowWeHelp" class="flex flex-col justify-end m-6 text-justify">
-        <div id="ReasonOne" class="p-12 grid grid-cols-2 sm:flex sm:flex-row">
-          <div id="number1" class="flex flex-row">
-            <h3 class="font-bold">1</h3>
-          </div>
-          <div>
-            <h3 class="text-lg font-bold">Project Discussion</h3>
-            <p>
-              It is a long established fact that the reader will be distracted
-              by new readable content
-            </p>
+      <div
+        id="Home"
+        class="md:grid md:grid-cols-2 md:grid-rows-1 gap-6 px-3 bg-slate-50 sm:grid sm:grid-cols-1 sm:grid-rows-1"
+      >
+        <div id="TitlePic" class="flex flex-col font-bold text-4xl py-3">
+          <h2>Simplify your company solutions with our IT Solutions</h2>
+          <div
+            id="PicuteIdea"
+            class="border border-hidden rounded-lg my-6 shadow-sm md:shrink-0"
+          >
+            <img
+              src="./images/image1.jpg"
+              alt="Picture of Idea"
+              width="400px"
+              height="400px"
+              class="rounded-xl"
+            />
           </div>
         </div>
-        <div id="ReasonTwo" class="p-12 grid grid-cols-2 sm:flex sm:flex-row">
-          <div id="number2" class="flex flex-row">
-            <h3 class="font-bold">2</h3>
+        <div id="HowWeHelp" class="flex flex-col justify-end m-6 text-justify">
+          <div id="ReasonOne" class="p-12 grid grid-cols-2 sm:flex sm:flex-row">
+            <div id="number1" class="flex flex-row">
+              <h3 class="font-bold">1</h3>
+            </div>
+            <div>
+              <h3 class="text-lg font-bold">Project Discussion</h3>
+              <p>
+                It is a long established fact that the reader will be distracted
+                by new readable content
+              </p>
+            </div>
           </div>
-          <div>
-            <h3 class="text-lg font-bold">Case Study</h3>
-            <p>
-              It is a long established fact that the reader will be distracted
-              by new readable content
-            </p>
+          <div id="ReasonTwo" class="p-12 grid grid-cols-2 sm:flex sm:flex-row">
+            <div id="number2" class="flex flex-row">
+              <h3 class="font-bold">2</h3>
+            </div>
+            <div>
+              <h3 class="text-lg font-bold">Case Study</h3>
+              <p>
+                It is a long established fact that the reader will be distracted
+                by new readable content
+              </p>
+            </div>
           </div>
-        </div>
-        <div id="ReasonThree" class="p-12 grid grid-cols-2 sm:flex sm:flex-row">
-          <div id="number3" class="flex flex-row">
-            <h3 class="font-bold">3</h3>
-          </div>
-          <div>
-            <h3 class="text-lg font-bold">Execute Project</h3>
-            <p>
-              It is a long established fact that the reader will be distracted
-              by new readable content
-            </p>
+          <div
+            id="ReasonThree"
+            class="p-12 grid grid-cols-2 sm:flex sm:flex-row"
+          >
+            <div id="number3" class="flex flex-row">
+              <h3 class="font-bold">3</h3>
+            </div>
+            <div>
+              <h3 class="text-lg font-bold">Execute Project</h3>
+              <p>
+                It is a long established fact that the reader will be distracted
+                by new readable content
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -109,7 +111,7 @@
       >
         <div class="flex flex-col shadow rounded-2xl p-8 bg-white">
           <img
-            src="./images/settings.png"
+            src="./images/setting.png"
             alt=""
             width="50px"
             height="50px"
